Edit potin done

--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -16,5 +16,7 @@
 				    	</blockquote>
 				  	</div>
 					 </div>
+					 <div class="col-sm-12 mt-3">
+					 <%= link_to "Editer ce gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary" %>					</div>
 					</div>
 			</div>
