--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -1,24 +1,45 @@
-  	<!-- CONTENT -->
-		<div class="row m-3">
-			<div class="col-sm-12">
-				<h1>Les derniers potins :</h1>
-			</div>
-			<div class="row m-3">
-				<%= link_to "Ajouter un potin", new_gossip_path, class: "btn btn-primary" %>
-			</div>
-			<div class="row m-3">
+<!-- CONTENT -->
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Bienvenue sur THPotins</h1>
+    <p class="lead">Tu décrouvriras ici des potins croustillants sur tous les mousaillons de la session 7 de THP</p>
+  </div>
+</div>
+
+<!-- New potin -->
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<h1>J'ai un potin à partager</h1>
+		</div>
+		<div class="col-sm-12 d-flex justify-content-center">
+			<%= link_to "Ajouter un potin", new_gossip_path, class: "btn btn-outline-primary" %>
+		</div>
+	</div>
+</div>
+<hr>
+<!-- All potins -->
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<h1>Consulter les potins </h1>
+		</div>
+
+		<div class="col-sm-12 d-flex justify-content-center">
+			<div class="list-group" style="width:50rem">
 				<% @gossips.all.each do |gossip|  %>
-				<div class="col-lg-3 col-sm-12">
-						<div class="card">
-						  <div class="card-body">
-						    <h5 class="card-title"><i class="fas fa-book-dead"></i> Gossip #<%=gossip.id%></h5>
-						    <h6 class="card-subtitle mb-2 text-muted"><%=gossip.title%></h6>
-						    <i class="fas fa-angle-right"></i> <%= link_to "Voir plus", gossip_path(gossip.id) , class: "card-link" %>
-						  </div>
-						</div>
-						<br>
-					</div>
+					<%= link_to gossip_path(gossip.id), class: "list-group-item list-group-item-action" do %>
+				    <div class="d-flex w-100 justify-content-between" >
+				      <h5 class="mb-1"><i class="fas fa-book-dead"></i> <%=gossip.title%></h5>
+				      <small><%= gossip.user.first_name %></small>
+				    </div>
+				    <small>Découvrir plus</small>
+				  <% end %>
 				<% end %>
 			</div>
-
 		</div>
+	</div>
+</div>
+</div>
+
