User index view done

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
 			      <th scope="col">First name</th>
 			      <th scope="col">Last name</th>
 			      <th scope="col">Email address</th>
+			      <th scope="col">Age</th>
 			      <th scope="col">City</th>
 			    </tr>
 			  </thead>
@@ -27,7 +28,8 @@
 			      <td><%=@user.first_name %></td>
 			      <td><%=@user.last_name %></td>
 			      <td><%=@user.email %></td>
-			      <td><%=link_to @user.city.name, root_path %></td>
+			      <td><%=@user.age %> ans</td>
+			      <td><%=link_to @user.city.name, city_path(@user.city.id) %></td>
 			    </tr>
 			    <tr>
 			  </tbody>
