--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,73 @@
 	<!-- CONTENT -->
-<div class="row m-3">
-	<div class="col-sm-12">
-			<h1>Voici la liste des utilisateurs : </h1>
-	</div>
-	<div class="row m-3">
-		<% @users.all.each do |user|  %>
-		<div class="col-lg-3 col-sm-12">
-				<div class="card">
-				  <div class="card-body">
-				    <h5 class="card-title"><i class="fas fa-user-secret"></i> User #<%=user.id%></h5>
-				    <h6 class="card-subtitle mb-2 text-muted"><%=user.first_name%> <%=user.last_name%></h6>
-				    <i class="fas fa-angle-right"></i> <%= link_to "Voir plus", user_path(user.id) , class: "card-link" %>
-				  </div>
-				</div>
-				<br>
-			</div>
-		<% end %>
-	</div>
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Les gossipeurs</h1>
+    <p class="lead">Ils sont là, dans les villes, dans les campagnes et rien ne leur échappe, découvrez la liste de tous les gossipeurs</p>
+  </div>
 </div>
 
+<!-- TOP gossipeur -->
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<h1><i class="fas fa-medal"></i> Le plus gros gossipeur</h1>
+		</div>
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<h2>Gossips publiés à ce jour <%= @top_user.gossips.size%></h2>
+		</div>
+		<div class="col-sm-12 d-flex justify-content-center">
+			<table class="table table-bordered">
+			  <thead>
+			    <tr>
+			      <th scope="col">First name</th>
+			      <th scope="col">Last name</th>
+			      <th scope="col">Email address</th>
+			      <th scope="col">Age</th>
+			      <th scope="col">City</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <td><%=@top_user.first_name %></td>
+			      <td><%=@top_user.last_name %></td>
+			      <td><%=@top_user.email %></td>
+			      <td><%=@top_user.age %> ans</td>
+			      <td><%=link_to @top_user.city.name, city_path(@top_user.city.id) %></td>
+			    </tr>
+			    <tr>
+			  </tbody>
+			</table>
+		</div>
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<%= link_to user_path(@top_user.id) do %>
+				<div class="btn btn-primary">Voir la fiche de ce gossipeur</div>
+			<% end %>
+		</div>
+	</div>
+</div>
+<hr>
+<!-- All users -->
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<h1>Annuaire des gossipeurs </h1>
+		</div>
+
+		<div class="col-sm-12 d-flex justify-content-center">
+			<div class="list-group" style="width:50rem">
+				<% @users.all.each do |user|  %>
+					<%= link_to user_path(user.id), class: "list-group-item list-group-item-action" do %>
+				    <div class="d-flex w-100 justify-content-between" >
+				      <h5 class="mb-1"><i class="fas fa-user-secret"></i> <%=user.first_name%> <%=user.last_name%></h5>
+				      <button type="button" class="btn btn-outline-primary btn-sm">
+							  <span class="badge badge-light"><%=user.gossips.size%></span> gossips
+							</button>
+				    </div>
+				    <small><%= user.description %></small>
+				  <% end %>
+				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
