Gossip views cleaned

--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,23 +1,39 @@
-  	<!-- CONTENT -->
+<!-- CONTENT -->
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"><%=@gossip.title%> </h1>
+    <p class="lead">Gossip #<%=@gossip.id%> </p>
+  </div>
+</div>
 
-		<div class="row m-3">
-			<div class="col-sm-12">
-				<h1>Voici le détail du super potin #<%=@gossip.id%> </h1>
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center m-3">
+			<div class="card">
+			  <div class="card-header">
+			    <%=@gossip.title%>
+			  </div>
+			  <div class="card-body">
+			    <blockquote class="blockquote mb-0">
+			      <p><%=@gossip.content%></p>
+			      <footer class="blockquote-footer">Balancé par <%= link_to user_path(@gossip.user.id) do%><cite title="Gossip authoe"><%=@gossip.user.first_name%> <%=@gossip.user.last_name%></cite><% end %></footer>
+			    </blockquote>
+			  </div>
 			</div>
-			<div class="row m-3">
-					<div class="card">
-					  <div class="card-body">
-					    <h5 class="card-title"><%=@gossip.title%> <i class="far fa-comment"></i> </h5>
-				    	<blockquote class="blockquote mb-0">
-								<% @gossip.tags.each do |tag| %>
-				    			<%= link_to tag.title, tag_path(tag.id), :class => "badge badge-success" %>
-				    		<% end%>
-				      	<p><%= @gossip.content %></p>
-				      	<footer class="blockquote-footer">Créé le <%= @gossip.created_at %> <cite title="Source Title">par <i class="fas fa-user-secret"></i> <%= link_to @gossip.user.first_name, user_path(@gossip.user.id)%></cite></footer>
-				    	</blockquote>
-				  	</div>
-					 </div>
-					 <div class="col-sm-12 mt-3">
-					 <%= link_to "Editer ce gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary" %>					</div>
-					</div>
-			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container m-3 d-flex justify-content-center">
+	<div class="row">
+		<div class="col-sm-12 d-flex justify-content-center justify-content-between m-3">
+			 <div><%= link_to "Editer ce gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary" %> </div>
+			 <div>
+			 	<%= link_to gossip_path(@gossip.id) do %> 
+					<a href="<%=gossip_path(@gossip.id) %>"class="btn btn-danger" data-confirm="Alors, tu n'assume pas ce gossip, tu veux le delete ? " data-method="DELETE"> Supprimer ce gossip</a>
+				<% end %>
+				</div>
+		</div>
+	</div>
+</div>
