--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -1,14 +1,11 @@
-
-  	<!-- CONTENT -->
-		<div class="row m-3">
-			<div class="col-sm-12">
-				<h1>The THPotin team</h1>
-			</div>
-			<div class="col-sm-12">
-				<p>Voici notre équipe lol mdr 😇❤️😻</p>
-			</div>
-
-		</div>
+	<!-- CONTENT -->
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"><i class="fas fa-users"></i> La team</h1>
+    <p class="lead">Ils sont beaux, ils sont forts, voici la team derrière THPothin</p>
+  </div>
+</div>
 
 		<div class="row m-3">
 			<div class="card col-sm-4 offset-md-1">
