--- a/app/views/gossips/edit.html.erb
+++ b/app/views/gossips/edit.html.erb
@@ -1,17 +1,28 @@
-<div class="row m-3">
-	<h1>Editer le potin</h1>
-	<div class="col-sm-12 col-lg-6 offset-lg-3"></div>
-		<%= form_for @gossip do |f| %>
-	  	<div class="form-group">
-	  		<label>Titre du gossip</label>
-					<%= f.text_field :title, class: "form-control"%>
-			</div>
-			<div class="form-group">
-	  		<label>Contenu du gossip</label>
-					<%= f.text_area :content, class: "form-control"%>
-			</div>
-				
-			<%= f.submit "Mettre à jour le potin", class: "btn btn-primary"%>
-			<% end %>
-	</div>
+<!-- CONTENT -->
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Editer <%=@gossip.title%> </h1>
+    <p class="lead">Gossip #<%=@gossip.id%> </p>
+  </div>
 </div>
+
+<div class="container m-3 d-flex justify-content-center col-sm-12">
+	<%= form_for @gossip do |f| %>
+		
+		<div class="form-group" style="width:500px">
+			 <%= label_tag(:gossip_title, "Titre:") %>
+			<%= f.text_field :title, class: "form-control"%>
+		</div>
+
+		<div class="form-group">
+			<%= label_tag(:gossip_content, "Contenu:") %>
+			<%= f.text_area :content, class: "form-control"%>
+		</div>
+
+		<div class="col-sm-12 d-flex justify-content-center  m-3">
+			<%= f.submit "Mettre à jour le potin", class: "btn btn-primary"%>
+		</div>
+	<% end %>
+</div>
+
