--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,24 +1,31 @@
-	<!-- CONTENT -->
-<div class="row m-3">
-	<div class="col-sm-12">
-			<h1> Ajoute un nouveau potin : </h1>
-	</div>
+<!-- CONTENT -->
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Nouveau gossip </h1>
+    <p class="lead">Tu veux balancer du lourd ? Fais toi plaisir, utilise le formulaire ci-dessous </p>
+  </div>
 </div>
 
-	<div class="row m-3">
-		<div class="col-sm-12 col-lg-6 offset-lg-3">
-			<%= form_tag("/gossips", method: "post") do %>
-		  <%= label_tag(:gossip_title, "Titre:") %>
-		  <%= text_field_tag(:gossip_title, "", :class => 'form-control') %>
-		  <br>
-		  <%= label_tag(:gossip_content, "Contenu:") %>
-		  <%= text_area_tag(:gossip_content, "", :class => 'form-control') %>
-		  <br>
-		  <%= submit_tag("Poster", :class => "btn btn-success") %>
+<div class="container m-3 d-flex justify-content-center col-sm-12">
+	<%= form_tag("/gossips", method: "post", :style => "width:500px") do %>
+		
+		<div class="form-group">
+			 <%= label_tag(:gossip_title, "Titre:") %>
+			 <%= text_field_tag(:gossip_title, "", :class => 'form-control') %>
+		</div>
 
-	<%= link_to "Revenir à la liste des potins", gossips_path, :class => 'btn btn-primary' %>
-		  </div>
-	<% end %>
+		<div class="form-group">
+			<%= label_tag(:gossip_content, "Contenu:") %>
+			<%= text_area_tag(:gossip_content, "", :class => 'form-control') %>
+		</div>
+
+		<div class="col-sm-12 d-flex justify-content-center  m-3">
+			<%= submit_tag("Poster", :class => "btn btn-success") %>
+		</div>
+
 	</div>
+	<% end %>
+</div>
 
 
