--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "All", root_path, class: "nav-link" %>
+            <%= link_to "Gossips", root_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Gossipeurs", users_path , class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Cities", cities_path , class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Team", team_path, class: "nav-link" %>
