--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <!-- TOP city -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1><i class="fas fa-medal"></i> Ville la plus représentée</h1>
@@ -30,7 +30,7 @@
 <hr>
 
 <!-- All cities -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Annuaire des ville </h1>
