--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <!-- All users -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Tous les utilisateurs de la ville de  <%= @city.name %>  </h1>
