--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <!-- New potin -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>J'ai un potin à partager</h1>
@@ -20,7 +20,7 @@
 </div>
 <hr>
 <!-- All potins -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Consulter les potins </h1>
