--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,11 @@
 
     <%= yield %>
 
-    <div class="row m-3">
-      <%= link_to "Revenir à la liste des potins", root_path, class: "badge badge-primary" %>
-    </div>
+    <footer class="footer" style="position: fixed; left: 0; bottom: 0; background-color:#e9ecef; height:30px; width:100%">
+      <div class="container">
+        <span>Designed by Fred</span>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
