--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <!-- TOP gossipeur -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1><i class="fas fa-medal"></i> Le plus gros gossipeur</h1>
@@ -46,10 +46,11 @@
 		</div>
 	</div>
 </div>
+
 <hr>
 
 <!-- All users -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Annuaire des gossipeurs </h1>
