--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="container m-3 d-flex justify-content-center">
+<div class="container  d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<div class="card">
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<div class="container m-3 d-flex justify-content-center">
+<div class="container  d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center justify-content-between m-3">
 			 <div><%= link_to "Editer ce gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary" %> </div>
@@ -38,7 +38,7 @@
 	</div>
 </div>
 
-<div class="container m-3 d-flex justify-content-center flex-column  col-sm-12">
+<div class="container d-flex justify-content-center flex-column  col-sm-12">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1><i class="fas fa-comments"></i> Ajouter un commentaire</h1>
 		</div>
@@ -61,11 +61,11 @@
 
 
 
-<div class="container m-3 d-flex justify-content-center">
+<div class="container m-3 d-flex justify-content-right">
 	<div class="row">
 				<% @gossip.comments.reverse_order.each do |comment| %>
-			<div class="col-sm-12 ">
-				<div class="card m-3 ">
+			<div class="col-sm-12 d-flex justify-left m-3">
+				<div class="card">
 				  <div class="card-header">
 				    Commentaire #<%=comment.id %>
 								<a href="<%=gossip_comment_path(@gossip.id, comment.id)%>" class="btn btn-outline-danger btn-sm" data-confirm="Alors, tu n'assumes pas ce commentaire, tu veux le delete ? " data-method="DELETE"> Supprimer</a>
