--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Les infos de <%=@user.first_name %> <%=@user.last_name %></h1>
@@ -39,7 +39,7 @@
 </div>
 
 <!-- All potins -->
-<div class="container m-3 d-flex justify-content-center">
+<div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
 			<h1>Tous les potins de <%=@user.first_name %>  </h1>
