--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,29 +22,44 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to "Gossips", root_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Gossipeurs", users_path , class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Cities", cities_path , class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Team", team_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item"> 
-            <%= link_to "Contact", contact_path, class: "nav-link" %>
-          </li>
-        </ul>
+      <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+        <div>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to "Gossips", root_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Gossipeurs", users_path , class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Cities", cities_path , class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Team", team_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item"> 
+              <%= link_to "Contact", contact_path, class: "nav-link" %>
+            </li>
+          </ul>
+        </div>
+        <div class="dropdown dropleft">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-sign-in-alt"></i>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <% if logged_in? %>
+              <%= link_to "Se déconnecter", session_path(session[:user_id]), method: :delete, class: "dropdown-item"  %>
+            <% else %>
+              <%= link_to "S'inscrire", new_user_path, class: "dropdown-item"  %>
+              <%= link_to "Se connecter", new_session_path, class: "dropdown-item"  %>
+            <% end %>
+          </div>
+        </div>
       </div>
     </nav>
 
     <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
+        <div class="alert alert-<%= key %>" role="alert" m-0><%= value %></div>
     <% end %>
 
     <%= yield %>
