--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <!-- Jumbottron -->
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Les gossipeurs</h1>
+    <h1 class="display-4"><i class="fas fa-mask"></i> Les gossipeurs</h1>
     <p class="lead">Ils sont là, dans les villes, dans les campagnes et rien ne leur échappe, découvrez la liste de tous les gossipeurs</p>
   </div>
 </div>
