--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,11 +1,12 @@
-<div class="row m-3">
-	<div class="col-sm-12">
-		<h1>The THPotin contact page</h1>
-	</div>
-	<div class="col-sm-12">
-		<p>Tu adores notre app et tu veux nous le dire ? Utilise le formulaire de contact ci-dessous 😇❤️😻</p>
-	</div>
+<!-- Jumbottron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"><i class="far fa-envelope"></i> Nous contacter</h1>
+    <p class="lead">Tu adores notre app et tu veux nous le dire ? Utilise le formulaire de contact ci-dessous 😇❤️😻</p>
+  </div>
+</div>
 
+<div class="row m-3">
 	<div class="col-sm-8 offset-sm-2">
 		<form>
   <div class="form-group">
