Like depuis les villes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,14 +48,23 @@
 		<div class="col-sm-12 d-flex justify-content-center">
 			<div class="list-group" style="width:50rem">
 				<% @user.gossips.all.each do |gossip|  %>
-					<%= link_to gossip_path(gossip.id), class: "list-group-item list-group-item-action" do %>
+						<%= link_to gossip_path(gossip.id), class: "list-group-item list-group-item-action" do %>
 				    <div class="d-flex w-100 justify-content-between" >
 				      <h5 class="mb-1"><i class="fas fa-book-dead"></i> <%=gossip.title%></h5>
-				      <small><%= gossip.user.first_name %></small>
+				      <small>par <%= gossip.user.first_name %> <%= gossip.user.last_name %>, <%= gossip.likes.size %> like(s), <%= gossip.comments.size %> commentaire(s)</small>
 				    </div>
 				    <small>Découvrir plus</small>
 				  <% end %>
-				<% end %>
+				  <div class="m-3">
+				  	<% if Like.find_by(gossip: gossip.id, user: current_user.id) == nil %>
+							<%= form_tag(gossip_likes_path(gossip.id), method: "post") do %>
+								<%= submit_tag("J'aime", :class => "btn btn-outline-primary btn-sm") %>
+							<% end %>
+						<%else%>
+							<%= link_to "J'aime", gossip_like_path(gossip.id, Like.find_by(gossip: gossip.id, user: current_user.id).id), method: :delete, class: "btn btn-primary btn-sm" %>
+						<%end%>
+					</div>
+					<% end %>
 			</div>
 		</div>
 	</div>
