Reset de la BDD

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -45,3 +45,9 @@
 
 	<% end %>
 </div>
+
+<div class="container m-3 d-flex justify-content-center col-sm-12">
+	<div>
+	<%= link_to "Vous avez déjà un compte ? Connectez vous", new_session_path %>
+	</div>
+</div>
